# olddoctor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
agent/: conversational.py
collect/tongue/: test_tongue_recognizer.py  tongue_detector.py  tongue_recognizer.py
prompts/: __init__.py  fewshot.py  system_prompt.py  system_prompt.txt
rag/: index.py
rag/knowledge/: 000-神农本草经.txt  001-吴普本草.txt  002-本草经集注.txt
rag/test/: cover.py  test_cover.py
utils/: safety.py
