[project]
name = "olddoctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "embeddings>=0.0.8",
    "huggingface>=0.0.1",
    "llama-index-core>=0.14.22",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
